--- a/charts/thanos/Chart.yaml
+++ b/charts/thanos/Chart.yaml
@@ -26,6 +26,9 @@ dependencies:
   #https://github.com/bitnami/charts/tree/main/bitnami/thanos
   - name: thanos
     repository: oci://registry-1.docker.io/bitnamicharts
-    version: 15.14.0
+    version: 16.0.4
     alias: thanos
     condition: thanos.enabled
+  - name: core
+    version: 0.1.0
+    repository: file://../chart_deps/app/core
