postgres: move pgadmin under pomerium

--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -18,7 +18,7 @@ global:
     prefix:
     suffix:
   ingress:
-    class: konghq
+    class: pomerium
   env:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
@@ -77,6 +77,35 @@ pgadmin:
     - name: http
       containerPort: 80
       protocol: TCP
+  initContainers:
+    volumeperm:
+      image: busybox
+      command: ["sh", "-c", "chown -R 5050:5050 /var/lib/pgadmin"]
+  pvcs:
+    configs:
+      storage: 1Gi
+      mountPath: /var/lib/pgadmin
+  ingress:
+    enabled: false
+    className: "{{ .Values.global.ingress.class }}"
+    annotations:
+      cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
+      ingress.pomerium.io/policy: |
+        allow:
+          or:
+            {{- range $email := .Values.global.company.admins.emails }}
+            - email:
+                is: {{ $email }}
+            {{- end }}
+    hosts:
+      - host: 'pg.{{ .Values.global.company.domain.env }}'
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls:
+      - secretName: pgadmin-tls
+        hosts:
+          - 'pg.{{ .Values.global.company.domain.env }}'
 
 postgres-main:
   enabled: false
