pomerium: add default jwt claims

--- a/charts/pomerium/values.yaml
+++ b/charts/pomerium/values.yaml
@@ -76,6 +76,9 @@ pomerium:
       provider: google
       secret: '{{ .Release.Namespace }}/sso'
     secrets: '{{ .Release.Namespace }}/bootstrap'
+    jwtClaimHeaders:
+      X-Pomerium-Claim-Email: email
+
 
 gen-secrets:
   enabled: false
