argocd,cert-manager,external-dns,gha-operator,grafana,rabbitmq,redis: resources to chart values

--- a/charts/external-dns/values.yaml
+++ b/charts/external-dns/values.yaml
@@ -1,7 +1,15 @@
 external-dns:
   enabled: false
+  resources:
+    limits:
+      cpu: 300m
+      memory: 300Mi
+    requests:
+      cpu: 10m
+      memory: 35Mi
   serviceAccount:
     create: false
+    name: external-dns
   sources:
     - service
     - ingress
