--- a/charts/gha-operator/values.yaml
+++ b/charts/gha-operator/values.yaml
@@ -1,5 +1,12 @@
 gha-operator:
   enabled: false
+  resources:
+    limits:
+      cpu: 300m
+      memory: 100Mi
+    requests:
+      cpu: 10m
+      memory: 15Mi
   serviceAccount:
     name: "gha-operator"
     create: true
