--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -76,22 +76,50 @@ argocd:
       hardAntiAffinity: false
 
   controller:
+    resources:
+      limits:
+        cpu: 3000m
+        memory: 2Gi
+      requests:
+        cpu: 350m
+        memory: 1Gi
     serviceAccount:
       create: false
       name: argocd
     replicas: 1
 
   server:
+    replicas: 2
+    resources:
+      limits:
+        cpu: 500m
+        memory: 250Mi
+      requests:
+        cpu: 50m
+        memory: 70Mi
     serviceAccount:
       create: false
       name: argocd
-    replicas: 2
 
   repoServer:
     replicas: 2
+    resources:
+      limits:
+        cpu: 2000m
+        memory: 600Mi
+      requests:
+        cpu: 150m
+        memory: 150Mi
 
   applicationSet:
     replicas: 1
+    resources:
+      limits:
+        cpu: 150m
+        memory: 150Mi
+      requests:
+        cpu: 10m
+        memory: 30Mi
 
   dex:
     enabled: false
@@ -105,24 +133,52 @@ certificates:
 redis:
   enabled: false
   redisServiceMonitor:
-    enabled: false
+    enabled: true
     prometheusSelector:
       prometheus: main
   sentinelServiceMonitor:
-    enabled: false
+    enabled: true
     prometheusSelector:
       prometheus: main
   auth:
     secretPath: argocd-redis
   sentinel:
     replicas: 3
+    resources:
+      requests:
+        cpu: 10m
+        memory: 10Mi
+      limits:
+        memory: 200Mi
+        cpu: 1000m
     exporter:
       enabled: true
+      resources:
+        requests:
+          cpu: 10m
+          memory: 10Mi
+        limits:
+          cpu: 100m
+          memory: 50Mi
       image: leominov/redis_sentinel_exporter:1.7.1
   redis:
     replicas: 3
+    resources:
+      requests:
+        cpu: 50m
+        memory: 10Mi
+      limits:
+        cpu: 1100m
+        memory: 250Mi
     exporter:
       enabled: true
+      resources:
+        requests:
+          cpu: 10m
+          memory: 15Mi
+        limits:
+          cpu: 100m
+          memory: 50Mi
       image: oliver006/redis_exporter:v1.70.0
       env:
       - name: REDIS_USER
