--- a/charts/cert-manager/values.yaml
+++ b/charts/cert-manager/values.yaml
@@ -27,5 +27,27 @@ certificates:
 
 cert-manager:
   enabled: false
+  resources:
+    requests:
+      cpu: 10m
+      memory: 20Mi
+    limits:
+      cpu: 200m
+      memory: 100Mi
   cainjector:
     enabled: true
+    resources:
+      requests:
+        cpu: 10m
+        memory: 50Mi
+      limits:
+        cpu: 200m
+        memory: 100Mi
+  webhook:
+    resources:
+      requests:
+        cpu: 10m
+        memory: 20Mi
+      limits:
+        cpu: 200m
+        memory: 100Mi
