--- a/charts/rabbitmq/Chart.yaml
+++ b/charts/rabbitmq/Chart.yaml
@@ -13,3 +13,6 @@ dependencies:
     repository: oci://registry-1.docker.io/bitnamicharts
     alias: rabbitmq-cluster-operator
     condition: rabbitmq-cluster-operator.enabled
+  - name: core
+    version: 0.1.0
+    repository: file://../chart_deps/app/core
