gha-runner: default nodeSelector, tolerations

--- a/charts/gha-runner/values.yaml
+++ b/charts/gha-runner/values.yaml
@@ -25,6 +25,13 @@ gha-runner:
               memory: 20Mi
   template:
     spec:
+      nodeSelector:
+        runner: 'true'
+      tolerations:
+        - key: runner
+          operator: Equal
+          value: 'true'
+          effect: NoSchedule
       securityContext:
         fsGroup: 1001
       containers:
@@ -49,5 +56,6 @@ workflowConfigMap:
   metaLabels:
     argocd.argoproj.io/instance: "{{ .Release.Name }}"
   spec:
+    serviceAccountName: runner
     securityContext:
       fsGroup: 1001
