Gha runner tolerations (#55)
* cert-manager: update chart v1.17.1->v1.17.2

* external-dns: update chart 8.7.8->8.8.2a

* rabbitmq: update chart 4.4.6 -> 4.4.11

* gha-runner: default nodeSelector, tolerations

* changelog: update

* grafana: update v5.17.1 -> v5.18.0

* grafana: update chart lock

* changelog: update

--- a/charts/gha-runner/values.yaml
+++ b/charts/gha-runner/values.yaml
@@ -25,6 +25,13 @@ gha-runner:
               memory: 20Mi
   template:
     spec:
+      nodeSelector:
+        runner: 'true'
+      tolerations:
+        - key: runner
+          operator: Equal
+          value: 'true'
+          effect: NoSchedule
       securityContext:
         fsGroup: 1001
       containers:
