`chart_deps/postgres/postgres-cluster`: support for dockerImage attr

--- a/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
@@ -16,6 +16,9 @@ metadata:
 {{- end }}
 spec:
   teamId: {{ .Values.teamId }}
+  {{- if .Values.dockerImage }}
+  dockerImage: {{ .Values.dockerImage }}
+  {{- end }}
   numberOfInstances: {{ .Values.replicas | default "2" }}
   {{- with .Values.users }}
   users:
