--- a/charts/rabbitmq/values.yaml
+++ b/charts/rabbitmq/values.yaml
@@ -88,42 +88,13 @@ rabbitmq-main:
 #        template:
 #          metadata:
 #            labels:
-#              some_additional_label: 'somevalue'
+#              #proper labeling is needed for
+#              #observability
+#              app.kubernetes.io/instance: '{{ include "rabbitmq-cluster.fullname" . }}'#
 #  persistence:
 #    storageClassName: premium-rwo
 #    storage: 10Gi
-#  tolerations:
-#    - key: "SPOT"
-#      operator: "Equal"
-#      value: "true"
-#      effect: "NoSchedule"
-#  affinity:
-#    podAntiAffinity:
-#      requiredDuringSchedulingIgnoredDuringExecution:
-#        - topologyKey: "kubernetes.io/hostname"
-#          labelSelector:
-#            matchLabels:
-#              app.kubernetes.io/name: '{{ include "rabbitmq-operated.fullname" . }}'
-#    nodeAffinity:
-#      requiredDuringSchedulingIgnoredDuringExecution:
-#        nodeSelectorTerms:
-#          - matchExpressions:
-#              - key: SPOT
-#                operator: In
-#                values:
-#                  - "true"
 #
 #  vhosts:
 #    somevhost:
 #      default_queue_type: quorum
-#
-#  serviceMonitor:
-#    enabled: true
-#    selector:
-#      prometheus: main
-#    metric_families:
-#      - queue_coarse_metrics
-#      - queue_metrics
-#      - connection_churn_metrics
-#      - node_coarse_metrics
-#      - channel_queue_exchange_metrics
