`thanos`: compactor increase persitant storage size

--- a/charts/thanos/values.yaml
+++ b/charts/thanos/values.yaml
@@ -102,6 +102,8 @@ thanos:
     enabled: false
   compactor:
     enabled: false
+    persistence:
+      size: 15Gi
     resources:
       requests:
         cpu: 20m
