chart_deps/redis/redis-operated: default exporter

--- a/charts/chart_deps/redis/redis-operated/values.yaml
+++ b/charts/chart_deps/redis/redis-operated/values.yaml
@@ -1,5 +1,9 @@
-sentinel: {}
-redis: {}
+sentinel:
+  exporter:
+    enabled: false
+redis:
+  exporter:
+    enabled: false
 auth: {}
 bootstrapNode: {}
 labelWhitelist: {}
