--- a/charts/chart_deps/redis/redis-operated/templates/redis.yaml
+++ b/charts/chart_deps/redis/redis-operated/templates/redis.yaml
@@ -1,3 +1,14 @@
+{{- $redisExporterDefaults := include "redis-operated.redisExporterDefaults" . | fromYaml }}
+{{- $redisExporter := merge .Values.redis.exporter $redisExporterDefaults }}
+{{- $redis := .Values.redis }}
+{{- $redis := unset $redis "exporter" }}
+{{- $redis := set $redis "exporter" $redisExporter }}
+{{- $sentinelExporterDefaults := include "sentinel-operated.sentinelExporterDefaults" . | fromYaml }}
+{{- $sentinelExporter := merge .Values.sentinel.exporter $sentinelExporterDefaults }}
+{{- $sentinel := .Values.sentinel }}
+{{- $sentinel := unset $sentinel "exporter" }}
+{{- $sentinel := set $sentinel "exporter" $sentinelExporter }}
+---
 apiVersion: databases.spotahome.com/v1
 kind: RedisFailover
 metadata:
@@ -5,11 +16,11 @@ metadata:
   labels:
 {{- include "redis-operated.labels" . | nindent 4 }}
 spec:
-  {{- with .Values.sentinel }}
+  {{- with $sentinel }}
   sentinel:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
-  {{- with .Values.redis }}
+  {{- with $redis }}
   redis:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
