--- a/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
@@ -1,30 +1,10 @@
 {{- $defaultSidecars := include "postgres-cluster.defaultSidecars" . | fromYaml }}
-{{- $defaultSidecars = $defaultSidecars.sidecars }}
-{{- $indexesToSkip := list }}
 {{/*
-If the sidecar has the same name as default sidecars
-its attrs override the attrs of default sidecars
+If sidecar has the same key as the default sidecar
+its attrs override the attrs of the default one
 */}}
-{{- $sidecars := list }}
-{{- $isDefaultSidecar := false }}
-{{- range $sidecar := .Values.sidecars }}
-  {{- range $index, $defaultSidecar := $defaultSidecars }}
-    {{- if eq $sidecar.name $defaultSidecar.name }}
-      {{- $sidecars = append $sidecars (mustMerge $sidecar $defaultSidecar) }}
-      {{- $isDefaultSidecar = true }}
-      {{- $indexesToSkip = append $indexesToSkip $index }}
-    {{- end }}
-  {{- end }}
-  {{- if not $isDefaultSidecar }}
-    {{- $sidecars = append $sidecars $sidecar }}
-  {{- end }}
-  {{- $isDefaultSidecar = false }}
-{{- end }}
-{{- range $index, $defaultSidecar := $defaultSidecars }}
-  {{- if not (has $index $indexesToSkip )}}
-    {{- $sidecars = append $sidecars $defaultSidecar }}
-  {{- end }}
-{{- end }}
+{{- $sidecars := merge .Values.sidecars $defaultSidecars }}
+{{- $sidecars = values $sidecars }}
 ---
 apiVersion: "acid.zalan.do/v1"
 kind: postgresql
