--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -32,10 +32,4 @@ podMonitor:
   labels: {}
   prometheusSelector: {}
   podTargetLabels: []
-  podMetricsEndpoints:
-    - port: metrics
-      relabelings:
-        - sourceLabels: [__meta_kubernetes_pod_label_app_kubernetes_io_instance]
-          action: Replace
-          regex: (.*)
-          targetLabel: label_app_kubernetes_io_instance
+  podMetricsEndpoints: {}
