--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -22,21 +22,9 @@ logicalBackup:
   schedule: "30 00 * * *"
 connectionPooler: {}
 sidecars: {}
-#  - name: "postgres-exporter"
-#    image: "quay.io/prometheuscommunity/postgres-exporter:v0.15.0"
-#    ports:
-#      - containerPort: 9187
-#        name: metrics
-#    resources:
-#      limits:
-#        cpu: 100m
-#        memory: 128Mi
-#      requests:
-#        cpu: 100m
-#        memory: 128Mi
-#    env:
-#      - name: DATA_SOURCE_NAME
-#        value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@localhost:5432/postgres?sslmode=disable"
+defaultSidecars:
+  enabled: false
+  pgExporterImage: "{{ $.Values.global.registry.url}}/postgres-exporter:v0.17.1-1"
 teamId: "main"
 nodeAffinity: {}
 podMonitor:
@@ -44,10 +32,4 @@ podMonitor:
   labels: {}
   prometheusSelector: {}
   podTargetLabels: []
-  podMetricsEndpoints:
-    - port: metrics
-      relabelings:
-        - sourceLabels: [__meta_kubernetes_pod_label_app_kubernetes_io_instance]
-          action: Replace
-          regex: (.*)
-          targetLabel: label_app_kubernetes_io_instance
+  podMetricsEndpoints: {}
