--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -72,7 +72,7 @@ pgadmin:
   enabled: false
   image:
     repository: dpage/pgadmin4
-    tag: 9.3.0
+    tag: 9.4.0@sha256:6b1c0db09695758c72abcd5160b7c4cc6d0847ab0c90a2403bdbf951f0defb5a
   environment:
     - name: PGADMIN_DEFAULT_EMAIL
       value: 'dev@{{ .Values.global.company.domain.root }}'
@@ -125,6 +125,12 @@ pgadmin:
 
 postgres-main:
   enabled: false
+  defaultSidecars:
+    enabled: true
+  podMonitor:
+    enabled: true
+    prometheusSelector:
+      prometheus: main
 #######################
 # Configuration example
 # for 2 dbs
@@ -176,84 +182,3 @@ postgres-main:
 #      max_standby_streaming_delay: "400000"
 #      log_destination: "jsonlog"
 #      logging_collector: "true"
-#  sidecars:
-#    - name: "postgres-exporter"
-#      image: "{{ .Values.global.registry.url }}/postgres-exporter:v0.17.1-1"
-#      ports:
-#        - containerPort: 9187
-#          name: metrics
-#      resources:
-#        limits:
-#          cpu: 200m
-#          memory: 50Mi
-#        requests:
-#          cpu: 10m
-#          memory: 15Mi
-#      env:
-#        - name: DATA_SOURCE_NAME
-#          value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@localhost:5432/db1?sslmode=disable"
-#        - name: PG_EXPORTER_COLLECTOR_DATABASE
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_LOCKS
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_REPLICATION
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_REPLICATION_SLOT
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_STAT_BGWRITER
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_STAT_DATABASE
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_STAT_USER_TABLES
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_STAT_STATEMENTS
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_STATIO_USER_INDEXES
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_STATIO_USER_TABLES
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_WAL
-#          value: "true"
-#        - name: PG_EXPORTER_DISABLE_SETTINGS_METRICS
-#          value: "false"
-#    - name: "postgres-exporter-2"
-#      image: "{{ .Values.global.registry.url}}/postgres-exporter:v0.17.1-1"
-#      ports:
-#        - containerPort: 9188
-#          name: metrics-2
-#      resources:
-#        limits:
-#          cpu: 200m
-#          memory: 50Mi
-#        requests:
-#          cpu: 10m
-#          memory: 15Mi
-#      env:
-#        - name: PG_EXPORTER_WEB_LISTEN_ADDRESS
-#          value: "9188"
-#        - name: DATA_SOURCE_NAME
-#          value: "postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@localhost:5432/db2?sslmode=disable"
-#        - name: PG_EXPORTER_COLLECTOR_STAT_USER_TABLES
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_STATIO_USER_INDEXES
-#          value: "true"
-#        - name: PG_EXPORTER_COLLECTOR_STATIO_USER_TABLES
-#          value: "true"
-#
-  podMonitor:
-    enabled: false
-    prometheusSelector:
-      prometheus: main
-#    podMetricsEndpoints:
-#      - port: metrics
-#        relabelings:
-#          - sourceLabels: [__meta_kubernetes_pod_label_app_kubernetes_io_instance]
-#            action: Replace
-#            regex: (.*)
-#            targetLabel: label_app_kubernetes_io_instance
-#      - port: metrics-2
-#        relabelings:
-#          - sourceLabels: [__meta_kubernetes_pod_label_app_kubernetes_io_instance]
-#            action: Replace
-#            regex: (.*)
-#            targetLabel: label_app_kubernetes_io_instance
